Add scripted test for scala 2.9